--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<meta charset="utf-8">
         <title>The WebAssembly Go Playground</title>
 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
 
 		<script src="js/wasm_exec.js"></script>
         <script src="js/jquery.min.js"></script>
