--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
         <link rel="stylesheet" href="css/style.css">
 
-		<script src="js/wasm_exec_new.js"></script>
+		<script src="js/wasm_exec.js"></script>
         <script src="js/jquery.min.js"></script>
         <script src="js/lz-string.min.js"></script>
         <script src="js/jquery-linedtextarea.js"></script>
