--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                                     });
                                 };
 
-                                exec(cmds['compile'], ['-p', 'main', '-complete', '-dwarf=false', '-pack', '-importcfg', 'importcfg', 'main.go'], {"GOOS": "linux", "GOARCH": "amd64"})
-                                    .then((code) => code || exec(cmds['link'], ['-importcfg', 'importcfg.link', '-buildmode=exe', 'main.a'], {"GOOS": "linux", "GOARCH": "amd64"}))
+                                exec(cmds['compile'], ['-v', '-p', 'main', '-complete', '-dwarf=false', '-pack', '-importcfg', 'importcfg', 'main.go'], {"GOOS": "linux", "GOARCH": "amd64"})
+                                    .then((code) => code || exec(cmds['link'], ['-v', '-importcfg', 'importcfg.link', '-buildmode=exe', 'main.a'], {"GOOS": "linux", "GOARCH": "amd64"}))
                                     .then((code) => code || download(readFromGoFilesystem('a.out')))
                                     //.then((code) => code || exec(readFromGoFilesystem('a.out')))
                                     .then((code) => {
