Added a quick warning about the target

--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
                 <input type="button" value="Loading..." id="run" disabled />
                 <input type="button" value="Format" id="fmt" style="display:none;" disabled>
             </div>
+            <p style="float:left;padding:0px;font-family:sans-serif;">Warning: This page currently compiles executables exclusively for Linux/amd64</p>
             <a style="float:right;padding:15px;font-family:sans-serif;" href="https://github.com/TR-SLimey/IBGC" target="_blank">github.com/TR-SLimey/IBGC</a>
         </div>
         <div id="wrap">
