--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>The WebAssembly Go Playground</title>
+        <title>The WebAssembly Go Compiler</title>
 
         <link rel="stylesheet" href="css/style.css">
 
