--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
                                 exec(cmds['compile'], ['-v', '-p', 'main', '-complete', '-dwarf=false', '-pack', '-importcfg', 'importcfg', 'main.go'], {"GOOS": "linux", "GOARCH": "amd64"})
                                     .then((code) => code || exec(cmds['link'], ['-v', '-s', '-w', '-importcfg', 'importcfg.link', '-buildmode=exe', 'main.a'], {"GOOS": "linux", "GOARCH": "amd64"}))
-                                    .then((code) => code || download(readFromGoFilesystem('a.out')))
+                                    .then((code) => code || download(readFromGoFilesystem('a.out'), "IBGC-"+Math.floor(Date.now() / 1000)+"-"+makeFileID(5)))
                                     //.then((code) => code || exec(readFromGoFilesystem('a.out')))
                                     .then((code) => {
                                         output({
