Added a warning about large download

--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
                     WebAssembly.instantiate(wasm, go.importObject).then((result) => go.run(result.instance)).catch(reject);
                 });
 
+                // Pause here and warn the user of the large download to come
+                alert("Warning! The compiler and its components will now be fetched. You might not want to continue if you are on a metered connection.");
+
                 Promise.all(
                     [
                         'prebuilt/runtime.a',
@@ -198,7 +201,6 @@
                 <input type="button" value="Format" id="fmt" style="display:none;" disabled>
                 <input type="text" placeholder="File Name" id="filename" style="display:none;" disabled>
             </div>
-            <p style="float:left;padding:0px;font-family:sans-serif;">Warning: This page currently compiles executables exclusively for Linux/amd64</p>
             <a style="float:right;padding:15px;font-family:sans-serif;" href="https://github.com/TR-SLimey/IBGC" target="_blank">github.com/TR-SLimey/IBGC</a>
         </div>
         <div id="wrap">
