--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!--
+    TODO
+
+    - Defer fetching compiler until first compilation
+    - Implement different targets
+    - Only fetch files required for each target
+-->
+
 <html>
     <head>
         <meta charset="utf-8">
