--- a/index.html
+++ b/index.html
@@ -79,127 +79,166 @@
                     WebAssembly.instantiate(wasm, go.importObject).then((result) => go.run(result.instance)).catch(reject);
                 });
 
-                // Pause here and warn the user of the large download to come
-                alert("Warning! The compiler and its components will now be fetched. You might not want to continue if you are on a metered connection.");
+                // Keep track of which components we have fetched last in order to avoid re-fetching
+                var currentTargetComponents = null;
 
-                Promise.all(
-                    [
-                        'prebuilt/runtime.a',
-                        'prebuilt/internal/bytealg.a',
-                        'prebuilt/internal/cpu.a',
-                        'prebuilt/runtime/internal/atomic.a',
-                        'prebuilt/runtime/internal/math.a',
-                        'prebuilt/runtime/internal/sys.a',
-                    ].map((path) => fetch("compiler/"+path)
-                        .then((response) => response.arrayBuffer())
-                        .then((buf) => writeToGoFilesystem(path, new Uint8Array(buf)))
-                    ).concat(
-                        ['compile', 'link', 'gofmt']
-                            .map((cmd) => fetch('compiler/cmd/' + cmd + '.wasm')
-                                .then((response) => response.arrayBuffer())
-                                .then((buf) => {
-                                    cmds[cmd] = new Uint8Array(buf);
-                                })
-                            )
-                    )
-                ).then(() => {
-                    const decoder = new TextDecoder('utf-8');
-                    const encoder = new TextEncoder('utf-8');
+                // Create the encoder and decoder to transfer files between the Go filesystem and JS.
+                // This was originally within the Promise but was moved out when splitting up the Promise
+                // to more easily allow supporting multiple targets
+                const decoder = new TextDecoder('utf-8');
+                const encoder = new TextEncoder('utf-8');
 
-                    writeToGoFilesystem('/importcfg', encoder.encode(
-                        "packagefile runtime=prebuilt/runtime.a"
-                    ));
+                // Prefetch components which are used regardless of platform
+                ['compile', 'link', 'gofmt']
+                                .map((cmd) => fetch('compiler/cmd/' + cmd + '.wasm')
+                                    .then((response) => response.arrayBuffer())
+                                    .then((buf) => {
+                                        cmds[cmd] = new Uint8Array(buf);
+                                    })
+                                )
 
-                    writeToGoFilesystem('/importcfg.link', encoder.encode(
-                        "packagefile command-line-arguments=main.a\n" +
-                        "packagefile runtime=prebuilt/runtime.a\n" +
-                        "packagefile internal/bytealg=prebuilt/internal/bytealg.a\n" +
-                        "packagefile internal/cpu=prebuilt/internal/cpu.a\n" +
-                        "packagefile runtime/internal/atomic=prebuilt/runtime/internal/atomic.a\n" +
-                        "packagefile runtime/internal/math=prebuilt/runtime/internal/math.a\n" +
-                        "packagefile runtime/internal/sys=prebuilt/runtime/internal/sys.a"
-                    ));
+                // Create the "playground"
+                playground({
+                            codeEl: '#code',
+                            outputEl: '#output',
+                            runEl: '#run',
+                            enableHistory: false,
+                            enableShortcuts: true,
+                            transport: {
+                                Run: (body, output) => {
+                                    $('#controls input').attr('disabled', true);
 
-                    playground({
-                        codeEl: '#code',
-                        outputEl: '#output',
-                        runEl: '#run',
-                        enableHistory: false,
-                        enableShortcuts: true,
-                        transport: {
-                            Run: (body, output) => {
+                                    writeToGoFilesystem('/main.go', body);
+                                    output({
+                                        Kind: 'start',
+                                    });
+                                    goStderr = (buf) => {
+                                        output({
+                                            Kind: 'stderr',
+                                            Body: decoder.decode(buf),
+                                        });
+                                    };
+                                    goStdout = (buf) => {
+                                        output({
+                                            Kind: 'stdout',
+                                            Body: decoder.decode(buf),
+                                        });
+                                    };
+
+                                    exec(cmds['compile'], ['-v', '-p', 'main', '-complete', '-dwarf=false', '-pack', '-importcfg', 'importcfg', 'main.go'], {"GOOS": "linux", "GOARCH": "amd64"})
+                                        .then((code) => code || exec(cmds['link'], ['-v', '-s', '-w', '-importcfg', 'importcfg.link', '-buildmode=exe', 'main.a'], {"GOOS": "linux", "GOARCH": "amd64"}))
+                                        .then((code) => code || download(readFromGoFilesystem('a.out'), $('#filename').val()))
+                                        .then((code) => {
+                                            output({
+                                                Kind: 'end',
+                                                Body: code ? 'status ' + code + '.' : undefined,
+                                            });
+                                        })
+                                        .catch((err) => {
+                                            output({
+                                                Kind: 'end',
+                                                Body: 'wasm error: ' + (err.message || 'unknown'),
+                                            });
+                                        })
+                                        .finally(() => $('#controls input').attr('disabled', false))
+                                    ;
+
+                                    return {
+                                        Kill: () => {},
+                                    };
+                                },
+                            },
+                        });
+
+                $('#target').bind('change click', function(event) {
+                    if (true) {
+                        Promise.all(
+                                [
+                                    '/runtime.a',
+                                    '/internal/bytealg.a',
+                                    '/internal/cpu.a',
+                                    '/runtime/internal/atomic.a',
+                                    '/runtime/internal/math.a',
+                                    '/runtime/internal/sys.a',
+                                ].map((path) => fetch('compiler/prebuilt/'+$('#target').val()+path)
+                                    .then((response) => response.arrayBuffer())
+                                    .then((buf) => writeToGoFilesystem('prebuilt'+path, new Uint8Array(buf)))
+                                )
+                        ).then(() => {
+
+                            writeToGoFilesystem('/importcfg', encoder.encode(
+                                "packagefile runtime=prebuilt/runtime.a"
+                            ));
+
+                            writeToGoFilesystem('/importcfg.link', encoder.encode(
+                                "packagefile command-line-arguments=main.a\n" +
+                                "packagefile runtime=prebuilt/runtime.a\n" +
+                                "packagefile internal/bytealg=prebuilt/internal/bytealg.a\n" +
+                                "packagefile internal/cpu=prebuilt/internal/cpu.a\n" +
+                                "packagefile runtime/internal/atomic=prebuilt/runtime/internal/atomic.a\n" +
+                                "packagefile runtime/internal/math=prebuilt/runtime/internal/math.a\n" +
+                                "packagefile runtime/internal/sys=prebuilt/runtime/internal/sys.a"
+                            ));
+
+                            $('#loading').hide();
+
+                            $('#filename').val("IBGC-"+Math.floor(Date.now() / 1000)+"-"+makeFileID(5));
+                            $('#filename').show();
+
+                            $('#target').show();
+
+                            $('#run').show();
+
+                            $('#fmt').show();
+                            $('#fmt').click(() => {
                                 $('#controls input').attr('disabled', true);
 
-                                writeToGoFilesystem('/main.go', body);
-                                output({
-                                    Kind: 'start',
-                                });
-                                goStderr = (buf) => {
-                                    output({
-                                        Kind: 'stderr',
-                                        Body: decoder.decode(buf),
-                                    });
-                                };
-                                goStdout = (buf) => {
-                                    output({
-                                        Kind: 'stdout',
-                                        Body: decoder.decode(buf),
-                                    });
-                                };
-
-                                exec(cmds['compile'], ['-v', '-p', 'main', '-complete', '-dwarf=false', '-pack', '-importcfg', 'importcfg', 'main.go'], {"GOOS": "linux", "GOARCH": "amd64"})
-                                    .then((code) => code || exec(cmds['link'], ['-v', '-s', '-w', '-importcfg', 'importcfg.link', '-buildmode=exe', 'main.a'], {"GOOS": "linux", "GOARCH": "amd64"}))
-                                    .then((code) => code || download(readFromGoFilesystem('a.out'), $('#filename').val()))
+                                writeToGoFilesystem('/main.go', $('#code').val());
+                                goStderr = (buf) => console.log(decoder.decode(buf));
+                                goStdout = goStderr;
+                                exec(cmds['gofmt'], ['-w', 'main.go'])
                                     .then((code) => {
-                                        output({
-                                            Kind: 'end',
-                                            Body: code ? 'status ' + code + '.' : undefined,
-                                        });
-                                    })
-                                    .catch((err) => {
-                                        output({
-                                            Kind: 'end',
-                                            Body: 'wasm error: ' + (err.message || 'unknown'),
-                                        });
+                                        if (!code) {
+                                            $('#code').val(decoder.decode(readFromGoFilesystem('main.go')));
+                                        }
                                     })
                                     .finally(() => $('#controls input').attr('disabled', false))
                                 ;
+                            });
 
-                                return {
-                                    Kill: () => {},
-                                };
-                            },
-                        },
-                    });
-
-                    $('#loading').hide();
-
-                    $('#filename').val("IBGC-"+Math.floor(Date.now() / 1000)+"-"+makeFileID(5));
-                    $('#filename').show();
-
-                    $('#target').show();
-
-                    $('#run').show();
-
-                    $('#fmt').show();
-                    $('#fmt').click(() => {
-                        $('#controls input').attr('disabled', true);
-
-                        writeToGoFilesystem('/main.go', $('#code').val());
-                        goStderr = (buf) => console.log(decoder.decode(buf));
-                        goStdout = goStderr;
-                        exec(cmds['gofmt'], ['-w', 'main.go'])
-                            .then((code) => {
-                                if (!code) {
-                                    $('#code').val(decoder.decode(readFromGoFilesystem('main.go')));
-                                }
-                            })
-                            .finally(() => $('#controls input').attr('disabled', false))
-                        ;
-                    });
-
-                    $('#controls input').attr('disabled', false);
+                            $('#controls input').attr('disabled', false);
+                        })
+                    }
                 });
+
+                $('#loading').hide();
+
+$('#filename').val("IBGC-"+Math.floor(Date.now() / 1000)+"-"+makeFileID(5));
+$('#filename').show();
+
+$('#target').show();
+
+$('#run').show();
+
+$('#fmt').show();
+$('#fmt').click(() => {
+    $('#controls input').attr('disabled', true);
+
+    writeToGoFilesystem('/main.go', $('#code').val());
+    goStderr = (buf) => console.log(decoder.decode(buf));
+    goStdout = goStderr;
+    exec(cmds['gofmt'], ['-w', 'main.go'])
+        .then((code) => {
+            if (!code) {
+                $('#code').val(decoder.decode(readFromGoFilesystem('main.go')));
+            }
+        })
+        .finally(() => $('#controls input').attr('disabled', false))
+    ;
+});
+
+$('#controls input').attr('disabled', false);
+
             });
         </script>
     </head>
@@ -210,6 +249,7 @@
             <div id="controls">
                 <input type="text" placeholder="File Name" id="filename" style="display:none;" />
                 <select id="target" style="display:none;">
+                    <option value="null" selected="selected">(Please Select)</option>
                     <optgroup label="Linux">
                         <option value="linux/amd64">Linux/AMD64</option>
                     </optgroup>
