--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
                     WebAssembly.instantiate(wasm, go.importObject).then((result) => go.run(result.instance)).catch(reject);
                 });
 
+                // Create a semi-random download filename
+                $('#filename').val("IBGC-"+Math.floor(Date.now() / 1000)+"-"+makeFileID(5));
+
                 // Keep track of which components we have fetched last in order to avoid re-fetching
                 var currentTargetComponents = null;
 
@@ -97,7 +100,7 @@
                                     })
                                 )
 
-                // Create the "playground"
+                // Create the "playground" to handle the compiling
                 playground({
                             codeEl: '#code',
                             outputEl: '#output',
@@ -151,7 +154,15 @@
                         });
 
                 $('#target').bind('change click', function(event) {
-                    if (true) {
+
+                    // If the selected components are not the ones previously selected, and they are not
+                    // "null", fetch the new components
+                    if (currentTargetComponents != $('#target').val() && $('#target').val() != "null") {
+
+                        // Lock the controls while new components are being fetched, and show loading
+                        $('#controls').hide();
+                        $('#loading').show()
+
                         Promise.all(
                                 [
                                     '/runtime.a',
@@ -180,33 +191,13 @@
                                 "packagefile runtime/internal/sys=prebuilt/runtime/internal/sys.a"
                             ));
 
+                            // Set the current target components to the ones just loaded to avoid needlessly reloading
+                            currentTargetComponents = $('#target').val();
+
+                            // Hide loading and show the controls again
                             $('#loading').hide();
+                            $('#controls').show();
 
-                            $('#filename').val("IBGC-"+Math.floor(Date.now() / 1000)+"-"+makeFileID(5));
-                            $('#filename').show();
-
-                            $('#target').show();
-
-                            $('#run').show();
-
-                            $('#fmt').show();
-                            $('#fmt').click(() => {
-                                $('#controls input').attr('disabled', true);
-
-                                writeToGoFilesystem('/main.go', $('#code').val());
-                                goStderr = (buf) => console.log(decoder.decode(buf));
-                                goStdout = goStderr;
-                                exec(cmds['gofmt'], ['-w', 'main.go'])
-                                    .then((code) => {
-                                        if (!code) {
-                                            $('#code').val(decoder.decode(readFromGoFilesystem('main.go')));
-                                        }
-                                    })
-                                    .finally(() => $('#controls input').attr('disabled', false))
-                                ;
-                            });
-
-                            $('#controls input').attr('disabled', false);
                         })
                     }
                 });
@@ -254,8 +245,8 @@ $('#controls input').attr('disabled', false);
                         <option value="linux/amd64">Linux/AMD64</option>
                     </optgroup>
                 </select>
-                <input type="button" value="Compile" id="run" style="display:none;" disabled />
-                <input type="button" value="Format" id="fmt" style="display:none;" disabled />
+                <input type="button" value="Compile" id="run" style="display:none;" />
+                <input type="button" value="Format" id="fmt" style="display:none;" />
             </div>
             <a style="float:right;padding:15px;font-family:sans-serif;" href="https://github.com/TR-SLimey/IBGC" target="_blank">github.com/TR-SLimey/IBGC</a>
         </div>
