--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 // Ensure the browser supports webassembly
                 if (!WebAssembly || !WebAssembly.instantiate) {
                     $('#run').val('Unsupported Browser');
-                    $('#controls input').attr('disabled', true);
+                    $('#controls input select').attr('disabled', true);
                     return;
                 }
 
@@ -93,65 +93,83 @@
 
                 // Prefetch components which are used regardless of platform
                 ['compile', 'link', 'gofmt']
-                                .map((cmd) => fetch('compiler/cmd/' + cmd + '.wasm')
-                                    .then((response) => response.arrayBuffer())
-                                    .then((buf) => {
-                                        cmds[cmd] = new Uint8Array(buf);
-                                    })
-                                )
+                    .map((cmd) => fetch('compiler/cmd/' + cmd + '.wasm')
+                        .then((response) => response.arrayBuffer())
+                        .then((buf) => {
+                            cmds[cmd] = new Uint8Array(buf);
+                        })
+                    )
 
                 // Create the "playground" to handle the compiling
                 playground({
-                            codeEl: '#code',
-                            outputEl: '#output',
-                            runEl: '#run',
-                            enableHistory: false,
-                            enableShortcuts: true,
-                            transport: {
-                                Run: (body, output) => {
-                                    $('#controls input').attr('disabled', true);
+                    codeEl: '#code',
+                    outputEl: '#output',
+                    runEl: '#run',
+                    enableHistory: false,
+                    enableShortcuts: true,
+                    transport: {
+                        Run: (body, output) => {
 
-                                    writeToGoFilesystem('/main.go', body);
+                            // Check if the target was selected or not and refuse to compile if not
+                            if (currentTargetComponents == null || currentTargetComponents == "null") {
+
+                                output({
+                                    Kind: 'start',
+                                });
+                                output({
+                                    Kind: 'stderr',
+                                    Body: 'Please select a target OS/Arch first!',
+                                });
+                                output({
+                                    Kind: 'end',
+                                });
+
+                            } else {
+
+                                $('#controls input select').attr('disabled', true);
+
+                                writeToGoFilesystem('/main.go', body);
+                                output({
+                                    Kind: 'start',
+                                });
+                                goStderr = (buf) => {
                                     output({
-                                        Kind: 'start',
+                                        Kind: 'stderr',
+                                        Body: decoder.decode(buf),
                                     });
-                                    goStderr = (buf) => {
-                                        output({
-                                            Kind: 'stderr',
-                                            Body: decoder.decode(buf),
-                                        });
-                                    };
-                                    goStdout = (buf) => {
-                                        output({
-                                            Kind: 'stdout',
-                                            Body: decoder.decode(buf),
-                                        });
-                                    };
+                                };
+                                goStdout = (buf) => {
+                                    output({
+                                        Kind: 'stdout',
+                                        Body: decoder.decode(buf),
+                                    });
+                                };
 
-                                    exec(cmds['compile'], ['-v', '-p', 'main', '-complete', '-dwarf=false', '-pack', '-importcfg', 'importcfg', 'main.go'], {"GOOS": "linux", "GOARCH": "amd64"})
-                                        .then((code) => code || exec(cmds['link'], ['-v', '-s', '-w', '-importcfg', 'importcfg.link', '-buildmode=exe', 'main.a'], {"GOOS": "linux", "GOARCH": "amd64"}))
-                                        .then((code) => code || download(readFromGoFilesystem('a.out'), $('#filename').val()))
-                                        .then((code) => {
-                                            output({
-                                                Kind: 'end',
-                                                Body: code ? 'status ' + code + '.' : undefined,
-                                            });
-                                        })
-                                        .catch((err) => {
-                                            output({
-                                                Kind: 'end',
-                                                Body: 'wasm error: ' + (err.message || 'unknown'),
-                                            });
-                                        })
-                                        .finally(() => $('#controls input').attr('disabled', false))
-                                    ;
+                                exec(cmds['compile'], ['-v', '-p', 'main', '-complete', '-dwarf=false', '-pack', '-importcfg', 'importcfg', 'main.go'], {"GOOS": "linux", "GOARCH": "amd64"})
+                                    .then((code) => code || exec(cmds['link'], ['-v', '-s', '-w', '-importcfg', 'importcfg.link', '-buildmode=exe', 'main.a'], {"GOOS": "linux", "GOARCH": "amd64"}))
+                                    .then((code) => code || download(readFromGoFilesystem('a.out'), $('#filename').val()))
+                                    .then((code) => {
+                                        output({
+                                            Kind: 'end',
+                                            Body: code ? 'status ' + code + '.' : undefined,
+                                        });
+                                    })
+                                    .catch((err) => {
+                                        output({
+                                            Kind: 'end',
+                                            Body: 'wasm error: ' + (err.message || 'unknown'),
+                                        });
+                                    })
+                                    .finally(() => $('#controls input select').attr('disabled', false))
+                                ;
 
-                                    return {
-                                        Kill: () => {},
-                                    };
-                                },
-                            },
-                        });
+                                return {
+                                    Kill: () => {},
+                                };
+                            }
+                        },
+                    },
+                });
 
                 $('#target').bind('change click', function(event) {
 
@@ -199,36 +217,36 @@
                             $('#controls').show();
 
                         })
+
+                    } else if ($('#target').val() == "null") {
+
+                        // Disallow switching back to "please select"
+                        $('#target').val(currentTargetComponents);
+
                     }
+
                 });
 
+                // Define what format does
+                $('#fmt').click(() => {
+                    $('#controls input select').attr('disabled', true);
+
+                    writeToGoFilesystem('/main.go', $('#code').val());
+                    goStderr = (buf) => console.log(decoder.decode(buf));
+                    goStdout = goStderr;
+                    exec(cmds['gofmt'], ['-w', 'main.go'])
+                        .then((code) => {
+                            if (!code) {
+                                $('#code').val(decoder.decode(readFromGoFilesystem('main.go')));
+                            }
+                        })
+                        .finally(() => $('#controls input select').attr('disabled', false))
+                    ;
+                });
+
+                // Hide loading and show the controls
                 $('#loading').hide();
-
-$('#filename').val("IBGC-"+Math.floor(Date.now() / 1000)+"-"+makeFileID(5));
-$('#filename').show();
-
-$('#target').show();
-
-$('#run').show();
-
-$('#fmt').show();
-$('#fmt').click(() => {
-    $('#controls input').attr('disabled', true);
-
-    writeToGoFilesystem('/main.go', $('#code').val());
-    goStderr = (buf) => console.log(decoder.decode(buf));
-    goStdout = goStderr;
-    exec(cmds['gofmt'], ['-w', 'main.go'])
-        .then((code) => {
-            if (!code) {
-                $('#code').val(decoder.decode(readFromGoFilesystem('main.go')));
-            }
-        })
-        .finally(() => $('#controls input').attr('disabled', false))
-    ;
-});
-
-$('#controls input').attr('disabled', false);
+                $('#controls').show();
 
             });
         </script>
@@ -237,16 +255,16 @@ $('#controls input').attr('disabled', false);
         <div id="banner">
             <div id="head" itemprop="name">The WebAssembly Go Compiler</div>
             <p id="loading" style="float:left;padding:0px;font-family:sans-serif;font-style:italic;">Loading compiler components. This may take a while...</p>
-            <div id="controls">
-                <input type="text" placeholder="File Name" id="filename" style="display:none;" />
-                <select id="target" style="display:none;">
+            <div id="controls" style="display:none;">
+                <input type="text" placeholder="File Name" id="filename" />
+                <select id="target">
                     <option value="null" selected="selected">(Please Select)</option>
                     <optgroup label="Linux">
                         <option value="linux/amd64">Linux/AMD64</option>
                     </optgroup>
                 </select>
-                <input type="button" value="Compile" id="run" style="display:none;" />
-                <input type="button" value="Format" id="fmt" style="display:none;" />
+                <input type="button" value="Compile" id="run" />
+                <input type="button" value="Format" id="fmt" />
             </div>
             <a style="float:right;padding:15px;font-family:sans-serif;" href="https://github.com/TR-SLimey/IBGC" target="_blank">github.com/TR-SLimey/IBGC</a>
         </div>
