Removed ability to compile without compiler When the page loads but the compiler has not loaded yet, the compile button was still accessible. This has now been replaced by a loading banner

--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
                         .then((response) => response.arrayBuffer())
                         .then((buf) => {
                             cmds[cmd] = new Uint8Array(buf);
+                        }).then(() => {
+                            // Hide loading and show the controls
+                            $('#loading').hide();
+                            $('#controls').show();
                         })
                     )
 
@@ -252,10 +256,6 @@
                         .finally(() => $('#controls input select').attr('disabled', false))
                     ;
                 });
-
-                // Hide loading and show the controls
-                $('#loading').hide();
-                $('#controls').show();
 
             });
         </script>
