Fixed issue building Windows executables Windows executables were outputted with a filename ending in .exe which made the code unable to find them. -o a.out was added to the linker command line to fix this issue and the compiler and linker command lines were moved to their own variables for clarity

--- a/index.html
+++ b/index.html
@@ -156,10 +156,16 @@
                                 });
 
                                 // Get the target OS and arch to compile for. These will be placed in environment variables for the compiler
-                                const target = currentTargetComponents.split("/")
+                                const target = currentTargetComponents.split("/");
 
-                                exec(cmds['compile'], ['-v', '-p', 'main', '-complete', '-dwarf=false', '-pack', '-importcfg', 'importcfg', 'main.go'], {"GOOS": target[0], "GOARCH": target[1]})
-                                    .then((code) => code || exec(cmds['link'], ['-v', '-s', '-w', '-importcfg', 'importcfg.link', '-buildmode=exe', 'main.a'], {"GOOS": target[0], "GOARCH": target[1]}))
+                                // Arguments to pass to the compiler
+                                var compileArgs = ['-v', '-p', 'main', '-complete', '-goversion', 'go1.15.1', '-dwarf=false', '-pack', '-importcfg', 'importcfg', 'main.go'];
+
+                                // Arguments to pass to the linker
+                                var linkArgs = ['-v', '-s', '-w', '-importcfg', 'importcfg.link', '-buildmode=exe', '-o', 'a.out', 'main.a'];
+
+                                exec(cmds['compile'], compileArgs, {"GOOS": target[0], "GOARCH": target[1]})
+                                    .then((code) => code || exec(cmds['link'], linkArgs, {"GOOS": target[0], "GOARCH": target[1]}))
                                     .then((code) => code || download(readFromGoFilesystem('a.out'), $('#filename').val()))
                                     .then((code) => {
                                         output({
